fix: change css - add focus, change style link in header-contact, and contact, about, partner.

--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
           <h2 class="about_title visually-hidden">Наші переваги</h2>
           <ul class="about_item">
             <li class="about_list_feature">
-              <a href="#" class="about_link_item">
+              <div class="about_link_item">
                 <svg class="about_icon" width="70px" height="70px">
                   <use href="./image/sprite.svg#icon-section-antenna"></use>
                 </svg>
-              </a>
+              </div>
               <h3 class="about_feature_title">Увага до діталей</h3>
               <p class="descript_text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
@@ -89,11 +89,11 @@
               </p>
             </li>
             <li class="about_list_feature">
-              <a href="#" class="about_link_item">
+              <div class="about_link_item">
                 <svg class="about_icon" width="70px" height="70px">
                   <use href="./image/sprite.svg#icon-section-clock"></use>
                 </svg>
-              </a>
+              </div>
               <h3 class="about_feature_title">Пунктуальність</h3>
               <p class="descript_text">
                 Завдання організації, особливо рамки і місце навчання кадрів
@@ -101,11 +101,11 @@
               </p>
             </li>
             <li class="about_list_feature">
-              <a href="#" class="about_link_item">
+              <div class="about_link_item">
                 <svg class="about_icon" width="70px" height="70px">
                   <use href="./image/sprite.svg#icon-section-diagram"></use>
                 </svg>
-              </a>
+              </div>
               <h3 class="about_feature_title">Планування</h3>
               <p class="descript_text">
                 Так само консультація з широким активом значною мірою зумовлює.
@@ -113,11 +113,11 @@
             </li>
 
             <li class="about_list_feature">
-              <a href="#" class="about_link_item">
+              <div class="about_link_item">
                 <svg class="about_icon" width="70px" height="70px">
                   <use href="./image/sprite.svg#icon-section-astronaut"></use>
                 </svg>
-              </a>
+              </div>
               <h3 class="about_feature_title">Сучасні технології</h3>
               <p class="descript_text">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -357,7 +357,7 @@
       </section>
       <section class="partner section">
         <div class="container">
-          <h1 class="title">Постійні клієнти</h1>
+          <h2 class="title">Постійні клієнти</h2>
           <ul class="partner_list">
             <li class="partner_item">
               <a href="#" class="partner_link">
